creacion de 2 archivos html

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <input type="text" id="username" placeholder="Usuario" required>
     <input type="password" id="password" placeholder="Contrasena" required>
     <button type="submit">Iniciar sesión</button>
-    <h2>El Usuario Y Contraseña es: 1234</h2>
+    <h2>Para acceder es: 1234</h2>
   </form>
 
   <script src="script.js"></script>
