--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
       <ul>
         <li><a href="menu.html">Inicio</a></li>
         <li><a href="productos.html">Productos</a></li>
+        <li><a href="contactanos.html">Contactanos</a></li>
         <a href="login.html" class="logout-button">Cerrar sesion</a>
       </ul>
     </nav>
@@ -17,7 +18,7 @@
 
   <div class="content">
     <h1>Bienvenido al sistema de ventas</h1>
-    <p>Eliga una de las opciones dadas en la NavBar</p>
+    <p>SELECCIONE UN BOTON DE ARRÍBA</p>
   </div>
 
   <script href= "/script.js"></script>
