--- a/contactanos.html
+++ b/contactanos.html
@@ -8,16 +8,16 @@
   <div class="container">
     <h2>Contáctanos</h2>
     <form>
-      <label for="name">Nombre:</label>
+      <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
-      <label for="email">Email:</label>
+      <label for="email">Correo Electrónico:</label>
       <input type="email" id="email" name="email" required>
 
-      <label for="message">Mensaje:</label>
+      <label for="message">Ingrese su mensaje:</label>
       <textarea id="message" name="message" rows="4" required></textarea>
 
-      <button type="submit">Enviar</button>
+      <button type="submit">Send</button>
     </form>
   </div>
 
